--- a/assets/base.css
+++ b/assets/base.css
@@ -2390,11 +2390,11 @@ input[type='checkbox'] {
   /* padding-bottom: 4px; */
   /* background-color: transparent; */
   z-index: 1;
-  background-color: rgb(var(--color-background));
+  /* background-color: rgb(var(--color-background)); */
 }
 
 .header-wrapper--border-bottom {
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  /* border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08); */
 }
 
 .header {
@@ -2403,6 +2403,7 @@ input[type='checkbox'] {
   grid-template-columns: auto 1fr auto;
   align-items: center;
   column-gap: 2rem;
+  border: none;
 }
 
 @media screen and (max-width: 749px) {
