--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -591,7 +591,7 @@
   text-align: center;
   vertical-align: middle;
   margin: 0;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (min-width: 750px) {
