--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -188,6 +188,12 @@
   @media screen and (max-width: 749px) {
     .header-overlay {
       position: relative !important;
+      background-color: black !important;
+      background: black !important;
+    }
+    
+    .header-overlay .header {
+      background-color: black !important;
     }
     
     .header-overlay ~ * {
