--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -1,8 +1,5 @@
 slider-component {
-  --desktop-margin-left-first-item: max(
-    5rem,
-    calc((100vw - var(--page-width) + 10rem - var(--grid-desktop-horizontal-spacing)) / 2)
-  );
+  --desktop-margin-left-first-item: 0;
   position: relative;
   display: block;
 }
@@ -135,6 +132,7 @@ slider-component.slider-component-full-width {
 @media screen and (min-width: 990px) {
   .slider-component-desktop.page-width {
     max-width: none;
+    padding: 0 1.5rem;
   }
 
   .slider--desktop {
@@ -145,7 +143,9 @@ slider-component.slider-component-full-width {
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
     margin-bottom: 1rem;
-    scroll-padding-left: var(--desktop-margin-left-first-item);
+    scroll-padding-left: 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   /* Fix to show some space at the end of our sliders in all browsers */
@@ -163,8 +163,8 @@ slider-component.slider-component-full-width {
   }
 
   .slider--desktop .slider__slide:first-child {
-    margin-left: var(--desktop-margin-left-first-item);
-    scroll-margin-left: var(--desktop-margin-left-first-item);
+    margin-left: 0;
+    scroll-margin-left: 1.5rem;
   }
 
   .slider-component-full-width .slider--desktop {
@@ -182,23 +182,23 @@ slider-component.slider-component-full-width {
   }
 
   .slider--desktop.grid--5-col-desktop .grid__item {
-    width: calc((100% - var(--desktop-margin-left-first-item)) / 5 - var(--grid-desktop-horizontal-spacing) * 2);
+    width: calc(100% / 5 - var(--grid-desktop-horizontal-spacing) * 4 / 5);
   }
 
   .slider--desktop.grid--4-col-desktop .grid__item {
-    width: calc((100% - var(--desktop-margin-left-first-item)) / 4 - var(--grid-desktop-horizontal-spacing) * 3);
+    width: calc(100% / 4 - var(--grid-desktop-horizontal-spacing) * 3 / 4);
   }
 
   .slider--desktop.grid--3-col-desktop .grid__item {
-    width: calc((100% - var(--desktop-margin-left-first-item)) / 3 - var(--grid-desktop-horizontal-spacing) * 4);
+    width: calc(100% / 3 - var(--grid-desktop-horizontal-spacing) * 2 / 3);
   }
 
   .slider--desktop.grid--2-col-desktop .grid__item {
-    width: calc((100% - var(--desktop-margin-left-first-item)) / 2 - var(--grid-desktop-horizontal-spacing) * 5);
+    width: calc(100% / 2 - var(--grid-desktop-horizontal-spacing) / 2);
   }
 
   .slider--desktop.grid--1-col-desktop .grid__item {
-    width: calc((100% - var(--desktop-margin-left-first-item)) - var(--grid-desktop-horizontal-spacing) * 9);
+    width: calc(100% - var(--grid-desktop-horizontal-spacing));
   }
 
   .slider.slider--desktop.contains-card--standard .slider__slide:not(.collection-list__item--no-media) {
